--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
 body {
   margin: 0;
   padding: 0;
@@ -5,6 +7,7 @@ body {
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
+  font-family: "Open Sans";
 }
 
 * {
