--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,13 +18,14 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 #root > div {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .dark {
@@ -35,4 +36,30 @@ body {
 .bright {
   background: #e2e2e2;
   color: #353535;
+}
+
+.DarkModeButton {
+  align-self: flex-end;
+  margin: 0.5em;
+  width: 2em;
+  height: 2em;
+  border-radius: 0.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dark .DarkModeButton {
+  background: #353538;
+}
+
+.bright .DarkModeButton {
+  background: #f9f9f9;
+}
+
+.container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
