--- a/client/src/features/journal/Journal.css
+++ b/client/src/features/journal/Journal.css
@@ -12,7 +12,7 @@
 .Editor-Container {
   flex: 1;
   align-self: stretch;
-  padding-left: 4em;
+  padding-left: 5em;
 }
 
 .bright .Editor {
@@ -24,7 +24,7 @@
 }
 
 .Editor {
-  border-radius: 1em;
+  border-radius: 0.3em;
   min-height: 100%;
   cursor: text;
   padding: 4em;
@@ -32,4 +32,13 @@
 
 .Journal .bp4-dark .bp4-datepicker {
   background: #00000000;
+}
+
+.calendar-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.calendar-container > *:first-child {
+  margin-bottom: 3em;
 }
