--- a/client/src/features/journal/Journal.css
+++ b/client/src/features/journal/Journal.css
@@ -31,8 +31,24 @@
   padding: 4em;
 }
 
-.Journal .bp4-dark .bp4-datepicker {
+.Journal .calendar-container .bp4-datepicker {
   background: #00000000;
+}
+
+.Journal .bp4-elevation-1 {
+  border: none;
+}
+
+.Journal .bp4-divider {
+  border: none;
+}
+
+.Journal .bp4-datepicker .bp4-datepicker-day-wrapper {
+  border-radius: 50%;
+}
+
+.Journal .DayPicker-Day.DayPicker-Day--selected {
+  border-radius: 50%;
 }
 
 .calendar-container {
