--- a/client/src/features/journal/Journal.css
+++ b/client/src/features/journal/Journal.css
@@ -43,11 +43,9 @@
   border: none;
 }
 
+.Journal .DayPicker-Day.DayPicker-Day--selected,
+.Journal .bp4-datepicker .DayPicker-Day,Ï
 .Journal .bp4-datepicker .bp4-datepicker-day-wrapper {
-  border-radius: 50%;
-}
-
-.Journal .DayPicker-Day.DayPicker-Day--selected {
   border-radius: 50%;
 }
 
