--- a/client/src/features/journal/Journal.css
+++ b/client/src/features/journal/Journal.css
@@ -44,7 +44,7 @@
 }
 
 .Journal .DayPicker-Day.DayPicker-Day--selected,
-.Journal .bp4-datepicker .DayPicker-Day,Ï
+.Journal .bp4-datepicker .DayPicker-Day,
 .Journal .bp4-datepicker .bp4-datepicker-day-wrapper {
   border-radius: 50%;
 }
