edit style of calendar

--- a/client/src/features/journal/Journal.css
+++ b/client/src/features/journal/Journal.css
@@ -56,7 +56,7 @@
 }
 
 .Journal .bp4-datepicker .bp4-datepicker-day-wrapper {
-  padding: 0.8em;
+  padding: 0.9em 0.8em;
 }
 
 .calendar-container {
