--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import "normalize.css";
 @import "@blueprintjs/icons/lib/css/blueprint-icons.css";
 @import "@blueprintjs/core/lib/css/blueprint.css";
