--- a/client/src/features/journal/components/Editor/Editor.css
+++ b/client/src/features/journal/components/Editor/Editor.css
@@ -11,18 +11,6 @@
   flex: 1;
 }
 
-.Editor-Buttons {
-  padding: 0.2em 1.3em;
-}
-
-.dark .Editor-Buttons {
-  background: #131313;
-}
-
-.bright .Editor-Buttons {
-  background: #c5c5c5;
-}
-
 .Editor {
   flex: 1;
   border-radius: 0.3em;
@@ -35,10 +23,11 @@
 }
 
 .Editor > *:first-child {
-  padding: 3em;
+  padding: 2.7em;
   display: flex;
   flex-direction: column;
   flex: 1;
+  font-size: 1.3em;
 }
 
 textarea {
@@ -57,9 +46,28 @@ textarea {
 .Editor textarea.bp4-input.bp4-large {
   padding: 0;
   margin: 0.4em 0 0.6em;
-  height: 1.3em;
+  height: 1.5em;
   width: 100%;
   font-family: "Open Sans";
   font-size: 2.2em;
   font-weight: 700;
+}
+
+.Editor-Buttons > * {
+  margin-right: 0.1em;
+}
+
+.dark .Editor-Toolbar {
+  background: #131313;
+}
+
+.bright .Editor-Toolbar {
+  background: #c5c5c5;
+}
+
+.Editor-Toolbar {
+  padding: 0.3em 1.3em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
