--- a/client/src/features/journal/components/Editor/Editor.css
+++ b/client/src/features/journal/components/Editor/Editor.css
@@ -7,6 +7,11 @@
   display: flex;
 }
 
+.Journal .DraftEditor-root {
+  height: 100%;
+  overflow-y: scroll;
+}
+
 .Journal .notranslate.public-DraftEditor-content > div {
   flex: 1;
 }
@@ -14,20 +19,21 @@
 .Editor {
   flex: 1;
   border-radius: 0.3em;
-  min-height: 100%;
+  height: 100%;
   cursor: text;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-left: 5em;
+  padding-top: 3.3em;
 }
 
 .Editor > *:first-child {
-  padding: 2.7em;
+  padding: 0 2.7em 2em 2.7em;
   display: flex;
   flex-direction: column;
-  flex: 1;
   font-size: 1.3em;
+  height: 100%;
 }
 
 textarea {
