--- a/client/src/features/journal/components/Editor/Editor.css
+++ b/client/src/features/journal/components/Editor/Editor.css
@@ -25,7 +25,8 @@
 
 .bright .Editor {
   box-shadow: 0 0 0 0 rgb(45 114 210 / 0%), 0 0 0 0 rgb(45 114 210 / 0%),
-    inset 0 0 0 0.05em rgb(17 20 24 / 20%), inset 0 0.05em 0.05em rgb(17 20 24 / 50%);
+    inset 0 0 0 0.05em rgb(17 20 24 / 20%),
+    inset 0 0.05em 0.05em rgb(17 20 24 / 50%);
 }
 
 .Editor {
@@ -36,8 +37,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 5em;
   padding-top: 3.3em;
+  margin-bottom: 1em;
 }
 
 .Editor > *:first-child {
@@ -89,4 +90,11 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media (min-width: 900px) {
+  .Editor {
+    margin-left: 5em;
+    margin-bottom: 0;
+  }
 }
