--- a/client/src/features/journal/components/Journal.css
+++ b/client/src/features/journal/components/Journal.css
@@ -2,9 +2,11 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding: 6em;
-  justify-content: space-between;
-  align-items: flex-start;
+  margin: 6em 0;
+  padding: 0 6em;
+  flex-direction: column;
+  overflow-y: scroll;
+  align-items: stretch;
 }
 
 .bright .Editor,
@@ -17,4 +19,12 @@
 .dark .Journal input.bp4-input,
 .dark .Editor textarea.bp4-input.bp4-large {
   background: #353538;
+}
+
+@media (min-width: 900px) {
+  .Journal {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
 }
