--- a/client/src/features/journal/components/Journal.css
+++ b/client/src/features/journal/components/Journal.css
@@ -2,8 +2,8 @@
   display: flex;
   width: 100%;
   height: 100%;
-  margin: 6em 0;
-  padding: 0 6em;
+  margin: 6em 0 2.5em 0;
+  padding: 0 6em 3.5em 6em;
   flex-direction: column;
   overflow-y: scroll;
   align-items: stretch;
